<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.3</version>
    </parent>

    <groupId>be.appify.prefab</groupId>
    <artifactId>prefab-parent</artifactId>
    <name>Prefab Parent</name>
    <version>0.6.6-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>core</module>
        <module>annotation-processor</module>
        <module>test</module>
        <module>postgres</module>
        <module>mongodb</module>
        <module>examples/avro</module>
        <module>examples/kafka</module>
        <module>examples/pubsub</module>
        <module>examples/sns-sqs</module>
        <module>examples/mongodb</module>
        <module>kafka</module>
        <module>pubsub</module>
        <module>sns-sqs</module>
        <module>async-api</module>
        <module>security</module>
        <module>openapi</module>
        <module>terraform</module>
    </modules>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <prefab.version>0.6.6-SNAPSHOT</prefab.version>

        <commons-text.version>1.15.0</commons-text.version>
        <error-handling.version>5.1.0</error-handling.version>
        <google-cloud.version>8.0.1</google-cloud.version>
        <spring-cloud-aws.version>4.0.0</spring-cloud-aws.version>
        <central-publishing-maven-plugin.version>0.10.0</central-publishing-maven-plugin.version>
        <maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
        <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
        <compile-testing.version>0.23.0</compile-testing.version>
        <confluent.version>7.6.1</confluent.version>
        <avro.version>1.11.3</avro.version>
        <commons-io.version>2.21.0</commons-io.version>
        <commons-compress.version>1.28.0</commons-compress.version>
        <jsr305.version>3.0.2</jsr305.version>
        <springdoc.version>3.0.2</springdoc.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>be.appify.prefab</groupId>
                <artifactId>prefab-core</artifactId>
                <version>${prefab.version}</version>
            </dependency>
            <dependency>
                <groupId>be.appify.prefab</groupId>
                <artifactId>prefab-postgres</artifactId>
                <version>${prefab.version}</version>
            </dependency>
            <dependency>
                <groupId>be.appify.prefab</groupId>
                <artifactId>prefab-mongodb</artifactId>
                <version>${prefab.version}</version>
            </dependency>
            <dependency>
                <groupId>be.appify.prefab</groupId>
                <artifactId>prefab-kafka</artifactId>
                <version>${prefab.version}</version>
            </dependency>
            <dependency>
                <groupId>be.appify.prefab</groupId>
                <artifactId>prefab-pubsub</artifactId>
                <version>${prefab.version}</version>
            </dependency>
            <dependency>
                <groupId>be.appify.prefab</groupId>
                <artifactId>prefab-sns-sqs</artifactId>
                <version>${prefab.version}</version>
            </dependency>
            <dependency>
                <groupId>be.appify.prefab</groupId>
                <artifactId>prefab-async-api</artifactId>
                <version>${prefab.version}</version>
            </dependency>
            <dependency>
                <groupId>be.appify.prefab</groupId>
                <artifactId>prefab-annotation-processor</artifactId>
                <version>${prefab.version}</version>
            </dependency>
            <dependency>
                <groupId>be.appify.prefab</groupId>
                <artifactId>prefab-test</artifactId>
                <version>${prefab.version}</version>
            </dependency>
            <dependency>
                <groupId>be.appify.prefab</groupId>
                <artifactId>prefab-security</artifactId>
                <version>${prefab.version}</version>
            </dependency>
            <dependency>
                <groupId>be.appify.prefab</groupId>
                <artifactId>prefab-openapi</artifactId>
                <version>${prefab.version}</version>
            </dependency>
            <dependency>
                <groupId>be.appify.prefab</groupId>
                <artifactId>prefab-terraform</artifactId>
                <version>${prefab.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven-javadoc-plugin.version}</version>
                    <configuration>
                        <doclint>none</doclint>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven-gpg-plugin.version}</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>${central-publishing-maven-plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <distributionManagement>
        <repository>
            <id>central</id>
        </repository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>skip-gpg</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <gpg.skip>true</gpg.skip>
            </properties>
        </profile>
    </profiles>
</project>